--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "express": "^4.19.2",
+    "framer-motion": "^11.9.0",
     "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.9.3",
     "react": "^18.3.1",
